--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body{
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+#top{
+    font-size: 40px;
+    text-align: center;
+    margin: 20px;
+}
+
+#box{
+    color: #43425D;
+    font-size: 40px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: #F1F1F3;
+    margin-left: 150px;
+    margin-right: 150px;
+}
