--- a/style.css
+++ b/style.css
@@ -2,6 +2,30 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.buttonDiv{
+    display: flex;
+    justify-content: center;
+}
+
+.butt{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    background-color: white;
+    color: black;
+    border: 2px solid lightskyblue;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    transition-duration: 0.4s;
+    padding: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.butt:hover{
+    background-color: lightskyblue;
+    color: white;
+}
+
 .top{
     font-size: 40px;
     text-align: center;
